<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>z1_pro_driver</name>
  <version>0.0.0</version>
  <description>XF Z-1 Pro 3-axis gimbal camera driver</description>
  <maintainer email="aldoterane@gmail.com">aldo</maintainer>
  <license>MIT</license>

  <depend>z1_pro_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
